// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Onboarding/ActivationProgress Greylisted Merchant 1`] = `
Array [
  <div>
    <div
      className="Viewweb__View-sc-1cphyjf-0 lhSUkp"
    >
      <div
        className="Viewweb__View-sc-1cphyjf-0 ActivationProgressHeader__StyledActivationProgressHeader-sc-19hjdjy-0 bzvJP Flexweb__Flex-ni2cjg-0 jxcXPq Spaceweb__Space-njatzl-0 jPUKpX"
      >
        <div
          className="Viewweb__View-sc-1cphyjf-0 lhSUkp"
        >
          <div
            className="Textweb__Text-sc-6jf9e4-0 bzRITc"
            color="shade.980"
            data-testid="ds-text"
            size="large"
          >
            Account Activation
          </div>
          <div
            className="Textweb__Text-sc-6jf9e4-0 fCcmNq"
            color="positive.960"
            data-testid="ds-text"
            size="xsmall"
          >
            20% complete
          </div>
        </div>
        <a
          className="Textweb__Text-sc-6jf9e4-0 Link__StyledText-sc-3nmidz-0 fPKRjv Spaceweb__Space-njatzl-0 eTfEej"
          color="primary.800"
          data-testid="ds-text"
          disabled={false}
          size="xsmall"
          target="_self"
        >
          Save and Exit
        </a>
      </div>
      <div
        className="Viewweb__View-sc-1cphyjf-0 ActivationProgress__Screen-sc-1yxgvfo-0 fFzgzm Spaceweb__Space-njatzl-0 eWuFOc"
      >
        <div
          className="Viewweb__View-sc-1cphyjf-0 Card__StyledCard-sc-92xey2-0 eLLuyo Spaceweb__Space-njatzl-0 bQhmFI"
        >
          <div
            className="Textweb__Text-sc-6jf9e4-0 hSbfrO"
            color="shade.970"
            data-testid="ds-text"
            size="medium"
          >
            Enable Payments and Settlements
          </div>
          <div
            className="Textweb__Text-sc-6jf9e4-0 krUdvH"
            color="shade.950"
            data-testid="ds-text"
            size="xsmall"
          >
            Submit your bank details and documents to receive money in your bank account
          </div>
          <div
            className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 izVUvU"
          >
            <div
              className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 kcRAUT"
            >
              <div
                className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
              >
                <div
                  className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-7e13dj-0 jmyDBD Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
                  onClick={[Function]}
                >
                  <div
                    className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
                  >
                    <img
                      alt="pending"
                      src="pending.svg"
                    />
                  </div>
                  <div
                    className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
                    color="shade.970"
                    data-testid="ds-text"
                    size="medium"
                  >
                    Contact Details
                  </div>
                  <svg
                    fill="none"
                    height={16}
                    viewBox="0 0 24 24"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                      fill="rgba(22, 47, 86, 0.87)"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 kcRAUT"
            >
              <div
                className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
              >
                <div
                  className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-7e13dj-0 jmyDBD Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
                  onClick={[Function]}
                >
                  <div
                    className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
                  >
                    <img
                      alt="pending"
                      src="pending.svg"
                    />
                  </div>
                  <div
                    className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
                    color="shade.970"
                    data-testid="ds-text"
                    size="medium"
                  >
                    Business Overview
                  </div>
                  <svg
                    fill="none"
                    height={16}
                    viewBox="0 0 24 24"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                      fill="rgba(22, 47, 86, 0.87)"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 kcRAUT"
            >
              <div
                className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
              >
                <div
                  className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-7e13dj-0 jmyDBD Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
                  onClick={[Function]}
                >
                  <div
                    className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
                  >
                    <img
                      alt="pending"
                      src="pending.svg"
                    />
                  </div>
                  <div
                    className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
                    color="shade.970"
                    data-testid="ds-text"
                    size="medium"
                  >
                    Business Details
                  </div>
                  <svg
                    fill="none"
                    height={16}
                    viewBox="0 0 24 24"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                      fill="rgba(22, 47, 86, 0.87)"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 kcRAUT"
            >
              <div
                className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
              >
                <div
                  className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-7e13dj-0 jmyDBD Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
                  onClick={[Function]}
                >
                  <div
                    className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
                  >
                    <img
                      alt="pending"
                      src="pending.svg"
                    />
                  </div>
                  <div
                    className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
                    color="shade.970"
                    data-testid="ds-text"
                    size="medium"
                  >
                    Bank and Business Details
                  </div>
                  <svg
                    fill="none"
                    height={16}
                    viewBox="0 0 24 24"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                      fill="rgba(22, 47, 86, 0.87)"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
            >
              <div
                className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-7e13dj-0 jmyDBD Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
                onClick={[Function]}
              >
                <div
                  className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
                >
                  <img
                    alt="pending"
                    src="pending.svg"
                  />
                </div>
                <div
                  className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
                  color="shade.970"
                  data-testid="ds-text"
                  size="medium"
                >
                  Documents Upload
                </div>
                <svg
                  fill="none"
                  height={16}
                  viewBox="0 0 24 24"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clipRule="evenodd"
                    d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                    fill="rgba(22, 47, 86, 0.87)"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 bihcDH Flexweb__Flex-ni2cjg-0 jhuIde"
          >
            <button
              className="Buttonweb__StyledButton-gxhxmy-0 hZNGWL Spaceweb__Space-njatzl-0 gkgBsY Sizeweb__Size-sc-10bl685-0 cwUXCl Flexweb__Flex-ni2cjg-0 iRurrc"
              data-testid="ds-button"
              disabled={false}
              onClick={[Function]}
              onMouseUp={[Function]}
              size="small"
              type="button"
            >
              <div
                className="Textweb__Text-sc-6jf9e4-0 dFexrR"
                color="primary.800"
                data-testid="ds-text"
                size="xsmall"
              >
                What are settlements
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="layerHost"
  />,
]
`;

exports[`Storyshots Onboarding/ActivationProgress Whitelisted Merchant 1`] = `
Array [
  <div>
    <div
      className="Viewweb__View-sc-1cphyjf-0 lhSUkp"
    >
      <div
        className="Viewweb__View-sc-1cphyjf-0 ActivationProgressHeader__StyledActivationProgressHeader-sc-19hjdjy-0 bzvJP Flexweb__Flex-ni2cjg-0 jxcXPq Spaceweb__Space-njatzl-0 jPUKpX"
      >
        <div
          className="Viewweb__View-sc-1cphyjf-0 lhSUkp"
        >
          <div
            className="Textweb__Text-sc-6jf9e4-0 bzRITc"
            color="shade.980"
            data-testid="ds-text"
            size="large"
          >
            Account Activation
          </div>
          <div
            className="Textweb__Text-sc-6jf9e4-0 fCcmNq"
            color="positive.960"
            data-testid="ds-text"
            size="xsmall"
          >
            20% complete
          </div>
        </div>
        <a
          className="Textweb__Text-sc-6jf9e4-0 Link__StyledText-sc-3nmidz-0 fPKRjv Spaceweb__Space-njatzl-0 eTfEej"
          color="primary.800"
          data-testid="ds-text"
          disabled={false}
          size="xsmall"
          target="_self"
        >
          Save and Exit
        </a>
      </div>
      <div
        className="Viewweb__View-sc-1cphyjf-0 ActivationProgress__Screen-sc-1yxgvfo-0 fFzgzm Spaceweb__Space-njatzl-0 eWuFOc"
      >
        <div
          className="Viewweb__View-sc-1cphyjf-0 WhitelistedSteps__Screen-sc-1sf2m5s-0 epAwfv"
        >
          <div
            className="Viewweb__View-sc-1cphyjf-0 Card__StyledCard-sc-92xey2-0 eLLuyo Spaceweb__Space-njatzl-0 bQhmFI"
          >
            <div
              className="Textweb__Text-sc-6jf9e4-0 hSbfrO"
              color="shade.970"
              data-testid="ds-text"
              size="medium"
            >
              1. Enable Payments
            </div>
            <div
              className="Textweb__Text-sc-6jf9e4-0 krUdvH"
              color="shade.950"
              data-testid="ds-text"
              size="xsmall"
            >
              Submit these details and start accepting payments
            </div>
            <div
              className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 izVUvU"
            >
              <div
                className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 kcRAUT"
              >
                <div
                  className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
                >
                  <div
                    className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-7e13dj-0 jmyDBD Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
                    onClick={[Function]}
                  >
                    <div
                      className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
                    >
                      <img
                        alt="completed"
                        src="completed.svg"
                      />
                    </div>
                    <div
                      className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
                      color="shade.970"
                      data-testid="ds-text"
                      size="medium"
                    >
                      Contact Details
                    </div>
                    <svg
                      fill="none"
                      height={16}
                      viewBox="0 0 24 24"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clipRule="evenodd"
                        d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                        fill="rgba(22, 47, 86, 0.87)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 kcRAUT"
              >
                <div
                  className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
                >
                  <div
                    className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-7e13dj-0 jmyDBD Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
                    onClick={[Function]}
                  >
                    <div
                      className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
                    >
                      <img
                        alt="pending"
                        src="pending.svg"
                      />
                    </div>
                    <div
                      className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
                      color="shade.970"
                      data-testid="ds-text"
                      size="medium"
                    >
                      Business Overview
                    </div>
                    <svg
                      fill="none"
                      height={16}
                      viewBox="0 0 24 24"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clipRule="evenodd"
                        d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                        fill="rgba(22, 47, 86, 0.87)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
              >
                <div
                  className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-7e13dj-0 jmyDBD Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
                  onClick={[Function]}
                >
                  <div
                    className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
                  >
                    <img
                      alt="pending"
                      src="pending.svg"
                    />
                  </div>
                  <div
                    className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
                    color="shade.970"
                    data-testid="ds-text"
                    size="medium"
                  >
                    Business Details
                  </div>
                  <svg
                    fill="none"
                    height={16}
                    viewBox="0 0 24 24"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                      fill="rgba(22, 47, 86, 0.87)"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              className="Buttonweb__StyledButton-gxhxmy-0 gBCsZh Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 hBDZyG"
              data-testid="ds-button"
              disabled={false}
              onClick={[Function]}
              onMouseUp={[Function]}
              size="medium"
              type="button"
            >
              <div
                className="Textweb__Text-sc-6jf9e4-0 dxOYOr"
                color="light.900"
                data-testid="ds-text"
                size="medium"
              >
                Submit and Verify
              </div>
            </button>
            <div
              className="Textweb__Text-sc-6jf9e4-0 fMDksz Spaceweb__Space-njatzl-0 fyuRfT"
              color="shade.980"
              data-testid="ds-text"
              size="xsmall"
            >
              By submitting these details you agree to our
               
              <a
                className="Textweb__Text-sc-6jf9e4-0 Link__StyledText-sc-3nmidz-0 jbtYHd"
                color="shade.980"
                data-testid="ds-text"
                disabled={false}
                size="xsmall"
                target="_self"
              >
                terms and conditions
              </a>
            </div>
            <div
              className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 bihcDH Flexweb__Flex-ni2cjg-0 jhuIde"
            >
              <button
                className="Buttonweb__StyledButton-gxhxmy-0 hZNGWL Spaceweb__Space-njatzl-0 gkgBsY Sizeweb__Size-sc-10bl685-0 cwUXCl Flexweb__Flex-ni2cjg-0 iRurrc"
                data-testid="ds-button"
                disabled={false}
                onClick={[Function]}
                onMouseUp={[Function]}
                size="small"
                type="button"
              >
                <div
                  className="Textweb__Text-sc-6jf9e4-0 dFexrR"
                  color="primary.800"
                  data-testid="ds-text"
                  size="xsmall"
                >
                  What are settlements
                </div>
              </button>
            </div>
          </div>
          <div
            className="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 yoKtN"
          />
          <div
            className="Viewweb__View-sc-1cphyjf-0 Card__StyledCard-sc-92xey2-0 eLLuyo Spaceweb__Space-njatzl-0 bQhmFI"
          >
            <div
              className="Textweb__Text-sc-6jf9e4-0 hSbfrO"
              color="shade.970"
              data-testid="ds-text"
              size="medium"
            >
              2. Enable Settlements
            </div>
            <div
              className="Textweb__Text-sc-6jf9e4-0 iHWnET"
              color="neutral.960"
              data-testid="ds-text"
              size="xsmall"
            >
              Submit your bank details and documents to receive money in your bank account
            </div>
            <div
              className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 izVUvU"
            >
              <div
                className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
              >
                <div
                  className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-7e13dj-0 jyMcxZ Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
                  onClick={[Function]}
                >
                  <div
                    className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
                  >
                    <img
                      alt="locked"
                      src="locked.svg"
                    />
                  </div>
                  <div
                    className="Textweb__Text-sc-6jf9e4-0 iFsPRm Flexweb__Flex-ni2cjg-0 libPPx"
                    color="shade.950"
                    data-testid="ds-text"
                    size="medium"
                  >
                    Complete step 1 to unlock this
                  </div>
                </div>
              </div>
            </div>
            <div
              className="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 bihcDH Flexweb__Flex-ni2cjg-0 jhuIde"
            >
              <button
                className="Buttonweb__StyledButton-gxhxmy-0 hZNGWL Spaceweb__Space-njatzl-0 gkgBsY Sizeweb__Size-sc-10bl685-0 cwUXCl Flexweb__Flex-ni2cjg-0 iRurrc"
                data-testid="ds-button"
                disabled={false}
                onClick={[Function]}
                onMouseUp={[Function]}
                size="small"
                type="button"
              >
                <div
                  className="Textweb__Text-sc-6jf9e4-0 dFexrR"
                  color="primary.800"
                  data-testid="ds-text"
                  size="xsmall"
                >
                  What are settlements
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="layerHost"
  />,
]
`;
